src/blocks/buttons/styles/editor.scss
.wp-block[data-type="coblocks/buttons"] {
	.wp-block-coblocks-buttons{
		position: relative;

		&__inner{
			> .editor-inner-blocks{
				> .editor-block-list__layout{
					display: flex;
					align-items: center;
 					justify-content: center;

 					.wp-block{
 						.editor-block-list__block-edit{
 							.block-library-button__inline-link{
 								position: absolute;
 								box-shadow: 0 0 0 1px #ced2d6;
 								z-index: 99;
 								background: #fff;
 							}
 						}
 					}
				}
			}
			&.flex-align-left{
				> .editor-inner-blocks{
					> .editor-block-list__layout{
						justify-content: flex-start;
					}
				}
			}
			&.flex-align-right{
				> .editor-inner-blocks{
					> .editor-block-list__layout{
						justify-content: flex-end;
					}
				}
			}

			.editor-default-block-appender {
				display: none;
			}

			//button block
			.wp-block[data-type="core/button"] {
				width: auto !important;
				margin-left: 0px;
				margin-right: 0px;
				text-align: center;

				> .editor-block-list__block-edit{
					margin-top: 0px !important;
					margin-bottom: 0px !important; 
				}
			}

			//Add Gutter
			&.has-small-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
				@media (max-width: #{ ($break-small) }) {
					&:not(:last-child) {
						margin-bottom: ( $gutter--small / 2 );
					}
				}

				@include break-small() {
					&:nth-child(odd) {
						margin-right: ( $gutter--small / 2 ) - 16px;
					}

					&:nth-child(even) {
						margin-left: ( $gutter--small / 2 ) - 16px;
					}

					&:not(:first-child) {
						margin-left: ( $gutter--small / 2 ) - 16px;
					}

					&:not(:last-child) {
						margin-right: ( $gutter--small / 2 ) - 16px;
					}
				}
			}

			&.has-medium-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
				@media (max-width: #{ ($break-small) }) {
					&:not(:last-child) {
						margin-bottom: ( $gutter--medium / 2 );
					}
				}

				@include break-small() {
					&:nth-child(odd) {
						margin-right: ( $gutter--medium / 2 ) - 16px;
					}

					&:nth-child(even) {
						margin-left: ( $gutter--medium / 2 ) - 16px;
					}

					&:not(:first-child) {
						margin-left: ( $gutter--medium / 2 ) - 16px;
					}

					&:not(:last-child) {
						margin-right: ( $gutter--medium / 2 ) - 16px;
					}
				}
			}

			&.has-large-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
				@media (max-width: #{ ($break-small) }) {
					&:not(:last-child) {
						margin-bottom: ( $gutter--large / 2 );
					}
				}

				@include break-small() {
					&:nth-child(odd) {
						margin-right: ( $gutter--large / 2 ) - 16px;
					}

					&:nth-child(even) {
						margin-left: ( $gutter--large / 2 ) - 16px;
					}

					&:not(:first-child) {
						margin-left: ( $gutter--large / 2 ) - 16px;
					}

					&:not(:last-child) {
						margin-right: ( $gutter--large / 2 ) - 16px;
					}
				}
			}

			&.has-huge-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
				@media (max-width: #{ ($break-small) }) {
					&:not(:last-child) {
						margin-bottom: ( $gutter--huge / 2 );
					}
				}

				@include break-small() {
					&:nth-child(odd) {
						margin-right: ( $gutter--huge / 2 ) - 16px;
					}

					&:nth-child(even) {
						margin-left: ( $gutter--huge / 2 ) - 16px;
					}

					&:not(:first-child) {
						margin-left: ( $gutter--huge / 2 ) - 16px;
					}

					&:not(:last-child) {
						margin-right: ( $gutter--huge / 2 ) - 16px;
					}
				}
			}


			//Display button as stacked
			&.is-stacked{
				> .editor-inner-blocks{
					display: block;
					width: 100%;
					
					> .editor-block-list__layout{
						flex-direction: column;
					}
				}
				.wp-block[data-type="core/button"] {
					display:block;
					// width: 100% !important;
					margin-left: 0px !important;
    				margin-right: 0px !important;
				}

				&.has-small-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
					&:not(:last-child) {
						margin-bottom: $gutter--small !important;
					}
				}

				&.has-medium-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
					&:not(:last-child) {
						margin-bottom: $gutter--medium !important;
					}
				}

				&.has-large-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
					&:not(:last-child) {
						margin-bottom: $gutter--large !important;
					}
				}

				&.has-huge-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
					&:not(:last-child) {
						margin-bottom: $gutter--huge !important;
					}
				}
			}


		}
		.block-list-appender{
			display: none;
		}

	}
}

